# cantara-leptos

./: Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
src/: main.rs
